--- a/src/components/user-addresses/edit-address/editAddress.module.scss
+++ b/src/components/user-addresses/edit-address/editAddress.module.scss
@@ -79,7 +79,7 @@
 
     @media screen and (max-width: 450px) {
       & label {
-        min-width: auto;
+        min-width: 120px;
       }
 
       & {
