--- a/src/pages/main/categorylist/sort-section/sortOptions.module.scss
+++ b/src/pages/main/categorylist/sort-section/sortOptions.module.scss
@@ -12,3 +12,9 @@
     color: #fff;
     margin-left: 5px;
 }
+
+@media screen and (max-width: 1200px) {
+    .radioWrapper {
+        font-size: 0.8rem;
+    }
+}
