--- a/src/pages/main/main.module.scss
+++ b/src/pages/main/main.module.scss
@@ -54,13 +54,7 @@
 
 .navElementsWrapper {
   display: flex;
-  padding: 5px;
-
-  >* {
-    margin-left: 10px;
-  }
-
-  background: rgb(44, 44, 161);
+  padding: 5px 0;
 }
 
 @media screen and (max-width: 920px) {
@@ -68,6 +62,13 @@
     position: absolute;
     top: 0;
     left: -100%;
+    z-index: 5;
+    transition: all 0.5s ease-in-out;
+    width: 300px;
+  }
+
+  .showForm {
+    left: 0;
   }
 
   .cardsWrapper {
