--- a/src/pages/main/categorylist/categories.module.scss
+++ b/src/pages/main/categorylist/categories.module.scss
@@ -45,12 +45,14 @@
 }
 
 .categoryWrapper {
+  width: 100%;
   height: 50vh;
   overflow: auto;
 }
 
 .priceFilterWrapper,
-.yearFilterWrapper {
+.positiveCallbacksFilterWrapper {
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -124,10 +126,6 @@ form::-webkit-scrollbar-thumb,
 
 @media screen and (max-width: 780px) {
   .btnsContainer {
-    /*  position: sticky;
-    top: 0;
-    left: 0;
-    z-index: 10; */
     display: flex;
     flex-wrap: wrap;
     justify-content: start;
