--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Redressed&display=swap');
 
 body {
   font-family: 'Questrial', Sans-serif;
