--- a/src/pages/main/main.module.scss
+++ b/src/pages/main/main.module.scss
@@ -33,6 +33,21 @@
   flex: 1;
 }
 
+.blur {
+  display: none;
+  width: 100vw;
+  height: 100%;
+  position: absolute;
+  backdrop-filter: blur(2px);
+  z-index: 4;
+}
+
+.formWrapper {
+  width: 20%;
+  position: relative;
+  z-index: 5;
+}
+
 .catalogPageTitle {
   margin-bottom: 50px;
   text-align: center;
@@ -42,10 +57,6 @@
       margin-bottom: 25px;
     }
   }
-}
-
-.formWrapper {
-  width: 20%;
 }
 
 .cardsWrapper {
@@ -65,6 +76,10 @@
     z-index: 5;
     transition: all 0.5s ease-in-out;
     width: 300px;
+  }
+
+  .showBlur {
+    display: block;
   }
 
   .showForm {
