--- a/src/components/breadcrumbs/breadcrumbs.module.scss
+++ b/src/components/breadcrumbs/breadcrumbs.module.scss
@@ -2,14 +2,8 @@
   display: flex;
   justify-content: flex-start;
   width: 100%;
-  height: 40px;
   padding: 10px;
   background: rgb(44, 44, 161);
-}
-
-.crumb {
-  height: 20px;
-  line-height: 20px;
 }
 
 .breadcrumbs > * {
@@ -20,7 +14,7 @@
 .breadcrumbs .crumb:after {
   content: '>';
   display: inline-block;
-  height: 20px;
+  align-self: center;
   margin-left: 10px;
   color: #fff;
 }
@@ -31,8 +25,8 @@
 
 .breadcrumbs a {
   display: inline-block;
-  line-height: 20px;
-  height: 20px;
+
+  align-self: center;
 
   color: #fff;
   text-decoration: none;
