--- a/src/components/user-addresses/userAddresses.module.scss
+++ b/src/components/user-addresses/userAddresses.module.scss
@@ -55,6 +55,12 @@
   border-radius: 10px;
   justify-content: center;
 
+  @media screen and (max-width: 500px) {
+    & {
+      padding: 10px;
+    }
+  }
+
   &:last-child {
     margin-bottom: 0;
   }
@@ -138,13 +144,8 @@
     padding: 10px;
     border-radius: 10px;
     text-align: center;
-    margin-right: auto;
     line-height: 1.15;
     font-size: 1.1rem;
-
-    @media screen and (max-width: 540px) {
-      margin: 0 auto;
-    }
   }
 
   .addressIconsContainer {
