--- a/src/components/user-basic-info/userbasicinfo.module.scss
+++ b/src/components/user-basic-info/userbasicinfo.module.scss
@@ -2,6 +2,13 @@
   background-color: #eee;
   border-radius: 10px;
 
+  .modifyIco {
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+    margin-left: 50px;
+  }
+
   .profileFormError {
     margin-top: 10px;
     color: red;
