--- a/src/components/user-basic-info/userbasicinfo.module.scss
+++ b/src/components/user-basic-info/userbasicinfo.module.scss
@@ -2,13 +2,6 @@
   background-color: #eee;
   border-radius: 10px;
 
-  .modifyIco {
-    width: 25px;
-    height: 25px;
-    cursor: pointer;
-    margin-left: 50px;
-  }
-
   .profileFormError {
     margin-top: 10px;
     color: red;
@@ -60,6 +53,19 @@
   border-radius: 10px;
   padding: 20px;
 
+  .modifyIco {
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+    margin-left: 65px;
+
+    @media screen and (max-width: 600px) {
+      & {
+        margin: 0 auto;
+      }
+    }
+  }
+
   hr {
     width: 100%;
   }
@@ -73,6 +79,7 @@
     @media screen and (max-width: 600px) {
       & {
         justify-content: center;
+        flex-direction: column;
       }
     }
   }
