fix: add title to edit info

--- a/src/components/user-basic-info/userbasicinfo.module.scss
+++ b/src/components/user-basic-info/userbasicinfo.module.scss
@@ -147,4 +147,9 @@
 .basicInfoContainerWithoutMargin {
   margin-bottom: 0;
   background-color: inherit;
+
+  h3 {
+    margin: 0;
+    margin-bottom: 20px;
+  }
 }
