--- a/src/pages/basket/basket.module.scss
+++ b/src/pages/basket/basket.module.scss
@@ -1,14 +1,148 @@
-.sas {
+.basketItemContainer {
   display: flex;
-  gap: 10px;
+  gap: 50px;
   align-items: center;
 
   input {
-    width: 30px;
+    width: 60px;
+    height: 40px;
+    padding: 0 10px;
+    text-align: center;
+    outline: none;
+    border-radius: 10px;
+    border: 1px solid #a88d8d;
+    font-size: 1.1rem;
+    transition: 0.2s all ease;
+
+    &:focus {
+      border-color: #106596;
+    }
+    }
+
+    .quantityChangeContainer {
+      display: flex;
+      gap: 15px;
+      align-items: center;
+    }
+
+
+    .productNameLink {
+      background-color: inherit;
+      border: none;
+      color: green;
+      border-bottom: 1px solid green;
+      font-size: 1.1rem;
+      cursor: pointer;
+      transition: all 0.2s ease;
+
+      @media screen and (any-hover: hover) {
+        &:hover {
+          transform: scale(1.05);
+        }
+      }
+    }
+
+    .quantityChangeItem {
+      border: none;
+      background-color: inherit;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0;
+
+      svg {
+        fill: #1d4ae9;
+        width: 20px;
+        height: 20px;
+        cursor: pointer;
+      }
+    }
+
+    .cartItemRightColumnContainer {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    .cartItemRightColumnTop,
+    .cartItemRightColumnBottom {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+    }
+
+    .cartItemRightColumnBottom {
+      margin: auto 0;
+    }
+
+
   }
+
+
+.basketPageTitle {
+  text-align: center;
+  font-size: 1.35rem;
 }
 
 .cartItemImg {
-  width: 200px;
-  height: 200px;
+  width: 290px;
+  height: 230px;
+  transition: all 0.2s ease;
+  border-radius: 10px;
+
+  @media screen and (any-hover: hover) {
+    &:hover {
+      transform: scale(1.05);
+    }
+  }
+
+}
+
+.emptyBasket {
+  font-size: 1.3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 40vh;
+}
+
+.linkToCatalog {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 5px;
+
+  p {
+    margin: 0;
+  }
+
+  button {
+    border: none;
+    background-color: inherit;
+    color: green;
+    border-bottom: 1px solid green;
+    cursor: pointer;
+    transition: all 0.2s ease;
+    @media screen and (any-hover: hover) {
+      &:hover {
+        transform: scale(1.05);
+      }
+    }
+  }
+}
+
+.clearBasketBtn {
+  background-color: #1d4ae9;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+
+  @media screen and (any-hover: hover) {
+    &:hover {
+      background-color: #5eabdd;
+      color: #000;
+    }
+  }
 }
