--- a/src/pages/about/about.module.scss
+++ b/src/pages/about/about.module.scss
@@ -1,3 +1,13 @@
 .aboutCardsWrapper {
   display: flex;
+  gap: 15px;
+
+  padding: 15px 0px;
+}
+
+@media screen and (max-width: 768px) {
+  .aboutCardsWrapper {
+    flex-direction: column;
+    gap: 20px;
+  }
 }
