feat: add promo codes images to Catalog page

--- a/src/pages/main/categorylist/products/card/card.module.scss
+++ b/src/pages/main/categorylist/products/card/card.module.scss
@@ -75,6 +75,7 @@
   display: flex;
   justify-content: flex-end;
   width: 100%;
+  height: 35px;
   padding: 5px;
   background: linear-gradient(to right, #e6dedf, rgb(125, 142, 16));
   color: #fff;
