--- a/src/components/promo/promoCode.module.scss
+++ b/src/components/promo/promoCode.module.scss
@@ -3,12 +3,20 @@
     right: 30px;
     top: 10%;
     display: grid;
-    grid-template-columns: repeat(2, minmax(160px, 30%));
+    grid-template-columns: repeat(2, 170px);
     grid-template-rows: 1fr;
-    height: 80px;
+    height: 110px;
     z-index: 100;
     border-radius: 5px;
     overflow: hidden;
+}
+
+@media screen and (max-width:800px) {
+    .promoContainer {
+        grid-template-columns: 170px;
+        grid-auto-rows: 1fr;
+        height: auto;
+    }
 }
 
 .rsteamDiscount,
