--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -1,6 +1,7 @@
 .footer {
   display: flex;
   justify-content: space-between;
+  background-color: rgba(5, 4, 62, 0.6);
 
   border: 1px solid black;
 
