--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -4,10 +4,13 @@
   align-items: center;
 
   border: 1px solid black;
+  background-color: rgba(5, 4, 62, 0.6);
 
   padding: 5px 10px;
   margin-bottom: 10px;
   border-radius: 5px;
+
+  color: rgb(255, 255, 243);
 
   .logoWrapper {
     display: flex;
