--- a/src/index.scss
+++ b/src/index.scss
@@ -7,9 +7,9 @@ body {
   font-weight: 400;
   line-height: 16px;
   letter-spacing: 0.32px;
-  color: #222222;
+  color: rgb(255, 255, 243);
 
-  background-color: rgb(255, 255, 255);
+  background-image: url('/background_gif.webp');
 
   min-width: 100%;
   min-height: 100vh;
