--- a/src/components/breadcrumbs/breadcrumbs.module.scss
+++ b/src/components/breadcrumbs/breadcrumbs.module.scss
@@ -3,7 +3,7 @@
   justify-content: flex-start;
   width: 100%;
   padding: 10px;
-  background: rgb(44, 44, 161);
+  // background: rgb(44, 44, 161);
 }
 
 .breadcrumbs > * {
