--- a/src/pages/main/categorylist/categories.module.scss
+++ b/src/pages/main/categorylist/categories.module.scss
@@ -3,24 +3,55 @@
   padding: 5px 20px 5px 10px;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to top, rgb(143, 174, 206) 0%, rgb(104, 80, 193) 55%, rgb(49, 13, 115) 100%);
+  // background: linear-gradient(to top, rgb(143, 174, 206) 0%, rgb(104, 80, 193) 55%, rgb(49, 13, 115) 100%);
   overflow-y: auto;
   overflow-x: hidden;
 }
 
 .btnsContainer {
-  position: sticky;
-  top: 0;
-  left: 0;
-  z-index: 10;
   display: flex;
-  justify-content: start;
-  padding: 5px;
-  width: 100%;
+  gap: 10px;
+  margin: 0 auto;
+  width: fit-content;
 
-  > * {
-    margin-right: 10px;
-    margin-bottom: 5px;
+  .formBtn {
+    align-items: center;
+    background-image: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
+    border: 0;
+    border-radius: 8px;
+    box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+    box-sizing: border-box;
+    color: #ffffff;
+    display: flex;
+    font-family: Phantomsans, sans-serif;
+    font-size: 20px;
+    justify-content: center;
+    line-height: 1em;
+    width: fit-content;
+    padding: 5px 10px;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    cursor: pointer;
+  }
+
+  .formBtn:active,
+  .formBtn:hover {
+    outline: 0;
+  }
+
+  .formBtn span {
+    background-color: rgb(5, 6, 45);
+    padding: 16px 24px;
+    border-radius: 6px;
+    height: 100%;
+    transition: 300ms;
+  }
+
+  .formBtn:hover span {
+    background: none;
   }
 }
 
@@ -32,17 +63,7 @@
 .categoryTitle {
   color: #fff;
   margin-right: 10px;
-}
-
-.formBtn {
-  font-size: 1.2rem;
-  font-weight: 700;
-  padding: 5px;
-  border-radius: 10px;
-  background: rgb(160, 160, 160);
-  cursor: pointer;
-  transition: 0.2s ease;
-  height: fit-content;
+  text-align: center;
 }
 
 .categoryWrapper {
