--- a/src/pages/main/categorylist/products/products.module.scss
+++ b/src/pages/main/categorylist/products/products.module.scss
@@ -1,30 +1,30 @@
 .container {
-    display: flex;
-    column-gap: 10px;
-    row-gap: 10px;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    padding: 5px 20px 5px 10px;
-    width: 100%;
-    overflow: auto;
-    background: linear-gradient(to bottom, rgb(255, 255, 255) 0%, rgb(80, 54, 172) 55%, rgb(37, 2, 103) 100%);
+  display: flex;
+  column-gap: 10px;
+  row-gap: 10px;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  padding: 5px 20px 5px 10px;
+  width: 100%;
+  overflow: auto;
+  // background: linear-gradient(to bottom, rgb(255, 255, 255) 0%, rgb(80, 54, 172) 55%, rgb(37, 2, 103) 100%);
 
-    &::-webkit-scrollbar {
-        width: 10px;
-        background-color: rgb(2, 2, 62);
-    }
+  &::-webkit-scrollbar {
+    width: 10px;
+    background-color: rgb(2, 2, 62);
+  }
 
-    &::-webkit-scrollbar-track {
-        border: 5px solid (255, 255, 255, 0.25);
-        box-shadow: inset 0 0 2.5px 2px (0, 0, 0, 0, 0.5);
-        background-clip: content-box;
-    }
+  &::-webkit-scrollbar-track {
+    border: 5px solid (255, 255, 255, 0.25);
+    box-shadow: inset 0 0 2.5px 2px (0, 0, 0, 0, 0.5);
+    background-clip: content-box;
+  }
 
-    &::-webkit-scrollbar-thumb {
-        border-radius: 5px;
-        background: linear-gradient(to right, #fff, blue);
-        cursor: pointer;
-    }
+  &::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background: linear-gradient(to right, #fff, blue);
+    cursor: pointer;
+  }
 }
