--- a/src/pages/main/main.module.scss
+++ b/src/pages/main/main.module.scss
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
 
+  background-color: rgba(5, 4, 62, 0.8);
+
   .navBtn {
     border: none;
     background-color: white;
