--- a/src/components/pagination/pageLink.module.scss
+++ b/src/components/pagination/pageLink.module.scss
@@ -5,12 +5,26 @@
     background-color: #ffffff;
     padding: 10px 15px;
     color: #0d6efd;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 500;
     text-decoration: none;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
         border-color 0.15s ease-in-out;
     cursor: pointer;
+}
+
+@media screen and (max-width: 600px) {
+    .pageLink {
+        padding: 5px 5px;
+        font-size: 0.8rem;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .pageLink {
+        padding: 5px 5px;
+        font-size: 0.7rem;
+    }
 }
 
 .pageLink:first-child {
