feat: login - register styles fixed

--- a/src/components/pagination/pageLink.module.scss
+++ b/src/components/pagination/pageLink.module.scss
@@ -1,64 +1,69 @@
 .pageLink {
-    position: relative;
-    display: inline-flex;
-    border: 1px solid #dee2e6;
-    background-color: #ffffff;
-    padding: 10px 15px;
-    color: #0d6efd;
-    font-size: 1rem;
-    font-weight: 500;
-    text-decoration: none;
-    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
-        border-color 0.15s ease-in-out;
-    cursor: pointer;
+  position: relative;
+  display: inline-flex;
+  border: 1px solid green;
+  background-image: linear-gradient(#42a1ec, #0070c9);
+  padding: 10px 15px;
+  color: fff;
+  font-size: 1rem;
+  font-weight: 500;
+  text-decoration: none;
+  transition:
+    color 0.15s ease-in-out,
+    background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 600px) {
-    .pageLink {
-        padding: 5px 5px;
-        font-size: 0.8rem;
-    }
+  .pageLink {
+    padding: 5px 5px;
+    font-size: 0.8rem;
+  }
 }
 
 @media screen and (max-width: 400px) {
-    .pageLink {
-        padding: 5px 5px;
-        font-size: 0.7rem;
-    }
+  .pageLink {
+    padding: 5px 5px;
+    font-size: 0.7rem;
+  }
 }
 
 .pageLink:first-child {
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
 }
 
 .pageLink:last-child {
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 .pageLink:not(:first-child) {
-    margin-left: -1px;
+  margin-left: -1px;
 }
 
 .pageLink:hover,
 .pageLink:focus {
-    color: #0a58ca;
-    background-color: #e9ecef;
+  color: #0a58ca;
+  background-color: #e9ecef;
 }
 
 .pageLink:focus {
-    z-index: 3;
+  z-index: 3;
 }
 
 .pageLink.active {
-    z-index: 2;
-    color: #ffffff;
-    border-color: #0d6efd;
-    background-color: #0d6efd;
+  z-index: 2;
+  color: #ffffff;
+  border-color: lightgreen;
+  background-image: linear-gradient(#199bff, #094576);
+
+  border-radius: 5px;
+  overflow: hidden;
 }
 
 .pageLink.disabled {
-    color: #6c757d;
-    pointer-events: none;
+  color: darkslateblue;
+  pointer-events: none;
 }
