--- a/src/components/slider/doubleSlider.module.scss
+++ b/src/components/slider/doubleSlider.module.scss
@@ -1,49 +1,55 @@
-$slider-color: #275efe;
-$range-background-color: #cdb7b7;
-$legend-color: #3f4656;
+$slider-color: #32a9fe;
+$range-background-color: rgba(11, 8, 155, 0.3);
+$legend-color: #fff;
 
 .box {
-    width: 100%;
-    max-width: 320px;
-    padding: 10px 8px 20px;
-    background: $range-background-color;
-    border-radius: 10px;
-    box-shadow: 0 1px 4px rgba(18, 22, 33, .12);
+  width: 100%;
+  max-width: 320px;
+  padding: 10px 8px 20px;
+  background: $range-background-color;
+  border-radius: 10px;
+  box-shadow: 0 1px 4px rgba(18, 22, 33, 0.12);
 }
 
 .values {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0;
-    font-weight: 500;
-    color: $slider-color;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+  font-weight: 500;
+  color: $slider-color;
+  justify-content: space-around;
 }
 
 small {
-    font-size: 0.8rem;
-    margin-top: 8px;
-    display: block;
-    color: #343537;
+  font-size: 0.8rem;
+  margin-top: 8px;
+  display: block;
+  color: #fff;
 }
 
 h3.title {
-    font-weight: 700;
-    margin: 0 0 20px 0;
-    color: $legend-color;
-    line-height: 110%;
+  font-weight: 700;
+  margin: 0 0 20px 0;
+  color: $legend-color;
+  line-height: 110%;
 
-    span {
-        font-weight: 400;
-    }
+  span {
+    font-weight: 400;
+  }
 }
 
-
 .rangeValue {
-    font-size: 0.6rem;
+  font-size: 0.6rem;
+
+  border-style: inset;
+  border: 1px solid green;
+  background-color: rgba(11, 8, 155, 0.3);
+
+  color: white;
 }
 
 @media screen and (max-width: 1200px) {
-    .rangeValue {
-        font-size: 0.5rem;
-    }
+  .rangeValue {
+    font-size: 0.5rem;
+  }
 }
