--- a/src/components/slider/slider.scss
+++ b/src/components/slider/slider.scss
@@ -1,24 +1,32 @@
 $slider-color: #275efe;
-$range-background-color: #cdb7b7;
+$range-background-color: black;
 
 .slider {
-    width: 100%;
-    height: 2px;
-    background-color: #cdd9ed;
-    margin-top: 30px;
+  width: 100%;
+  height: 2px;
+  background-color: #cdd9ed;
+  margin-top: 30px;
 
+  .thumb {
+    width: 23px;
+    height: 23px;
+    cursor: grab;
+    background-color: $range-background-color;
+    border-radius: 50%;
+    border: 2px solid $slider-color;
+    top: -12px;
 
-    .thumb {
-        width: 23px;
-        height: 23px;
-        cursor: grab;
-        background-color: $range-background-color;
-        border-radius: 50%;
-        border: 2px solid $slider-color;
-        top: -12px;
-    }
+    box-shadow:
+      0 0 2px rgba(0, 183, 255, 0.5),
+      0 0 5px rgba(0, 183, 255, 0.5),
+      0 0 20px rgba(0, 183, 255, 0.5),
+      0 0 30px rgba(0, 183, 255, 0.5),
+      0 0 40px rgba(0, 183, 255, 0.5),
+      0 0 50px rgba(0, 183, 255, 0.5),
+      0 0 60px rgba(0, 183, 255, 0.5);
+  }
 
-    .track-1 {
-        background-color: $slider-color;
-    }
+  .track-1 {
+    background-color: $slider-color;
+  }
 }
