--- a/src/pages/main/categorylist/categories.module.scss
+++ b/src/pages/main/categorylist/categories.module.scss
@@ -6,6 +6,8 @@
   // background: linear-gradient(to top, rgb(143, 174, 206) 0%, rgb(104, 80, 193) 55%, rgb(49, 13, 115) 100%);
   overflow-y: auto;
   overflow-x: hidden;
+
+  border-right: 1px solid green;
 }
 
 .btnsContainer {
@@ -15,43 +17,50 @@
   width: fit-content;
 
   .formBtn {
-    align-items: center;
-    background-image: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
-    border: 0;
-    border-radius: 8px;
-    box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+    background-image: linear-gradient(#42a1ec, #0070c9);
+    border: 1px solid #0077cc;
+    border-radius: 4px;
     box-sizing: border-box;
     color: #ffffff;
-    display: flex;
-    font-family: Phantomsans, sans-serif;
-    font-size: 20px;
-    justify-content: center;
-    line-height: 1em;
-    width: fit-content;
-    padding: 5px 10px;
-    text-decoration: none;
+    cursor: pointer;
+    direction: ltr;
+    display: block;
+    font-family: 'SF Pro Text', 'SF Pro Icons', 'AOS Icons', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-size: 17px;
+    font-weight: 400;
+    letter-spacing: -0.022em;
+    line-height: 1.47059;
+    min-width: 30px;
+    overflow: visible;
+    padding: 2px 10px;
+    text-align: center;
+    vertical-align: baseline;
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
     white-space: nowrap;
-    cursor: pointer;
   }
 
-  .formBtn:active,
+  .formBtn:disabled {
+    cursor: default;
+    opacity: 0.3;
+  }
+
   .formBtn:hover {
-    outline: 0;
+    background-image: linear-gradient(#51a9ee, #147bcd);
+    border-color: #1482d0;
+    text-decoration: none;
   }
 
-  .formBtn span {
-    background-color: rgb(5, 6, 45);
-    padding: 16px 24px;
-    border-radius: 6px;
-    height: 100%;
-    transition: 300ms;
+  .formBtn:active {
+    background-image: linear-gradient(#3d94d9, #0067b9);
+    border-color: #006dbc;
+    outline: none;
   }
 
-  .formBtn:hover span {
-    background: none;
+  .formBtn:focus {
+    box-shadow: rgba(131, 192, 253, 0.5) 0 0 0 3px;
+    outline: none;
   }
 }
 
@@ -64,12 +73,19 @@
   color: #fff;
   margin-right: 10px;
   text-align: center;
+
+  letter-spacing: 3px;
 }
 
 .categoryWrapper {
   width: 100%;
   height: 50vh;
   overflow: auto;
+
+  border: none;
+  border-bottom: 2px solid green;
+  border-top: 2px solid green;
+  margin-bottom: 15px;
 }
 
 .priceFilterWrapper,
@@ -77,6 +93,11 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+
+  border: none;
+  border-bottom: 2px solid green;
+
+  margin-bottom: 10px;
 }
 
 .searchLabel {
@@ -104,10 +125,14 @@
     width: 100%;
     border-radius: 10px;
     margin-bottom: 10px;
+
+    border-style: inset;
+    border: 2px solid green;
+    background-color: rgba(11, 8, 155, 0.3);
   }
 
   .searchField:focus {
-    box-shadow: 10px 5px 5px rgb(76, 95, 99);
+    box-shadow: 5px 3px 3px #0dc6ec;
   }
 }
 
@@ -149,10 +174,10 @@ form::-webkit-scrollbar-thumb,
 @media screen and (max-width: 780px) {
   .btnsContainer {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: start;
+    gap: 10px;
+    margin: 0 auto;
+    width: fit-content;
     padding: 5px;
-    width: 100%;
 
     > * {
       margin-right: 5px;
@@ -208,19 +233,6 @@ form::-webkit-scrollbar-thumb,
       z-index: 2;
       cursor: pointer;
       transition: all 0.2s linear;
-    }
-
-    .searchField {
-      position: relative;
-      padding: 5px 40px 5px 10px;
-      height: 40px;
-      width: 100%;
-      border-radius: 10px;
-      margin-bottom: 10px;
-    }
-
-    .searchField:focus {
-      box-shadow: 10px 5px 5px rgb(76, 95, 99);
     }
   }
 }
