--- a/src/pages/main/main.module.scss
+++ b/src/pages/main/main.module.scss
@@ -78,6 +78,11 @@
     z-index: 5;
     transition: all 0.5s ease-in-out;
     width: 300px;
+
+    background-color: rgba(5, 4, 62, 0.9);
+    border: 1px solid green;
+    border-left: none;
+    border-radius: 10px;
   }
 
   .showBlur {
