--- a/src/components/about-card/aboutCard.module.scss
+++ b/src/components/about-card/aboutCard.module.scss
@@ -11,11 +11,11 @@
 
   margin: 0 auto;
 
-  background-color: rgb(247, 247, 247);
+  background-color: rgba(19, 19, 132, 0.6);
 
-  box-shadow:
-    0 3px 6px rgba(0, 0, 0, 0.18),
-    0 3px 6px rgba(0, 0, 0, 0.23);
+  -webkit-box-shadow: 2px 2px 2px 0px rgba(0, 255, 68, 0.4);
+  -moz-box-shadow: 2px 2px 2px 0px rgba(0, 255, 68, 0.4);
+  box-shadow: 2px 2px 2px 0px rgba(0, 255, 68, 0.4);
 
   .imgWrapper {
     width: 100%;
@@ -43,6 +43,7 @@
 
       .titleName {
         font-weight: 600;
+        letter-spacing: 2px;
       }
       .title {
         text-decoration: underline;
@@ -88,8 +89,8 @@
 
       .githubLink {
         text-decoration: none;
-        color: darkblue;
-        font-weight: 600;
+        color: rgb(0, 255, 68);
+        font-weight: 500;
       }
       .githubImg {
         width: 20px;
