feat: test with translate animation with one image

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,7 @@ body {
   letter-spacing: 0.32px;
   color: rgb(255, 255, 243);
 
-  background-image: url('/background_static.jpg');
+  // background-image: url('/background_static.jpg');
 
   min-width: 100%;
   min-height: 100vh;
