--- a/src/components/user-password/userPasswordForm.module.scss
+++ b/src/components/user-password/userPasswordForm.module.scss
@@ -1,5 +1,5 @@
 .userPasswordForm {
-  background-color: #eee;
+  // background-color: #eee;
   border-radius: 10px;
   margin-bottom: 20px;
 
@@ -61,9 +61,11 @@
   flex-direction: column;
   gap: 20px;
 
-  background-color: #eee;
+  background-color: rgba(4, 4, 49, 0.9);
   padding: 30px;
   border-radius: 10px;
+
+  letter-spacing: 2px;
 
   hr {
     width: 100%;
