--- a/src/pages/main/categorylist/categories.module.scss
+++ b/src/pages/main/categorylist/categories.module.scss
@@ -126,6 +126,8 @@
     border-radius: 10px;
     margin-bottom: 10px;
 
+    color: white;
+
     border-style: inset;
     border: 2px solid green;
     background-color: rgba(11, 8, 155, 0.3);
