--- a/src/components/modal/modalWindow.module.scss
+++ b/src/components/modal/modalWindow.module.scss
@@ -3,13 +3,15 @@
   z-index: 5;
   position: fixed;
   border-radius: 10px;
-  background-color: #ddecf9;
+  background-color: rgba(5, 4, 62, 0.9);
+  border: 2px solid rgb(0, 255, 68);
 
   .p {
     font-size: 1.2rem;
     margin-bottom: 1.5vw;
 
     text-align: center;
+    color: white;
   }
 
   .modalErrorBtn {
