--- a/src/pages/basket/basket.module.scss
+++ b/src/pages/basket/basket.module.scss
@@ -3,7 +3,7 @@
   gap: 40px;
   align-items: stretch;
   margin-bottom: 20px;
-  background-color: #eee;
+  background-color: rgba(5, 4, 62, 0.9);
   padding: 20px;
   border-radius: 10px;
 
@@ -21,136 +21,141 @@
     &:focus {
       border-color: #106596;
     }
+  }
+
+  .quantityChangeContainer {
+    display: flex;
+    gap: 15px;
+    align-items: center;
+
+    .quantityInput {
+      background-color: transparent;
+      border: 1px solid rgb(0, 255, 68);
+
+      color: white;
     }
+  }
 
-    .quantityChangeContainer {
-      display: flex;
-      gap: 15px;
-      align-items: center;
+  .productNameLink {
+    background-color: inherit;
+    border: none;
+    color: #61b7e9;
+    border-bottom: 1px solid #106596;
+    font-size: 1.2rem;
+    cursor: pointer;
+    transition: all 0.2s ease;
+
+    @media screen and (any-hover: hover) {
+      &:hover {
+        transform: scale(1.05);
+      }
     }
+  }
 
+  .quantityChangeItem {
+    border: none;
+    background-color: inherit;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
 
-    .productNameLink {
-      background-color: inherit;
-      border: none;
-      color: #106596;
-      border-bottom: 1px solid #106596;
-      font-size: 1.2rem;
+    svg {
+      fill: #1d4ae9;
+      width: 20px;
+      height: 20px;
       cursor: pointer;
-      transition: all 0.2s ease;
-
-      @media screen and (any-hover: hover) {
-        &:hover {
-          transform: scale(1.05);
-        }
-      }
     }
 
-    .quantityChangeItem {
-      border: none;
-      background-color: inherit;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 0;
-
+    &:disabled {
       svg {
-        fill: #1d4ae9;
-        width: 20px;
-        height: 20px;
-        cursor: pointer;
+        fill: #959595;
       }
+    }
+  }
 
-      &:disabled {
-        svg {
-          fill: #959595;
-        }
+  .cartItemRightColumnContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    margin-top: 40px;
+  }
+
+  .cartItemRightColumnTop,
+  .cartItemRightColumnBottom {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+
+  .cartItemRightColumnTop {
+    justify-content: center;
+  }
+
+  .cartItemRightColumnBottom {
+    flex-direction: column;
+
+    .priceContainer {
+      display: flex;
+      gap: 50px;
+      font-size: 1.2rem;
+      color: green;
+      font-weight: 500;
+
+      span {
+        font-weight: 600;
+        font-style: italic;
       }
     }
 
-    .cartItemRightColumnContainer {
-      display: flex;
+    .priceDiscounted {
+      .priceContainer {
+        text-decoration: line-through;
+        color: #e14949df;
+      }
+    }
+
+    .priceRegular {
+      .priceContainer {
+        color: rgb(210, 245, 255);
+        font-weight: 400;
+        letter-spacing: 1px;
+      }
+    }
+  }
+
+  @media screen and (max-width: 1024px) {
+    & {
       flex-direction: column;
       gap: 30px;
-      margin-top: 40px;
-    }
 
-    .cartItemRightColumnTop,
-    .cartItemRightColumnBottom {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-    }
+      .cartItemImg {
+        display: block;
+        max-width: 100%;
+        height: auto;
+        margin: 0 auto;
+      }
 
-    .cartItemRightColumnTop {
-      justify-content: center;
-    }
-
-    .cartItemRightColumnBottom {
-      flex-direction: column;
+      .cartItemRightColumnContainer {
+        margin-top: 0;
+      }
 
       .priceContainer {
-        display: flex;
-        gap: 50px;
-        font-size: 1.2rem;
-        color: green;
-        font-weight: 500;
-
-        span {
-          font-weight: 600;
-          font-style: italic;
-        }
+        justify-content: center;
       }
 
-      .priceDiscounted {
-        .priceContainer {
-          text-decoration: line-through;
-          color: #5c0b0b82;
-        }
+      .removeProduct {
+        margin: 0 auto;
       }
 
-      .priceRegular {
+      .cartItemRightColumnBottom {
         .priceContainer {
-          color: black;
-        }
-      }
-
-
-    }
-
-    @media screen and (max-width: 1024px) {
-      & {
-        flex-direction: column;
-        gap: 30px;
-
-        .cartItemImg {
-          display: block;
-          max-width: 100%;
-          height: auto;
-          margin: 0 auto;
-        }
-
-        .cartItemRightColumnContainer {
-          margin-top: 0;
-        }
-
-        .priceContainer {
-          justify-content: center;
-        }
-
-        .removeProduct {
-          margin: 0 auto;
-        }
-
-        .cartItemRightColumnBottom {
-          .priceContainer {
-            gap: 20px;
-          }
+          gap: 20px;
         }
       }
     }
+  }
 }
-
 
 .basketPageTitle {
   text-align: center;
@@ -168,7 +173,6 @@
       transform: scale(1.05);
     }
   }
-
 }
 
 .emptyBasket {
@@ -223,13 +227,11 @@
   }
 }
 
-
 .promoCodeForm {
-
   display: flex;
   flex-direction: column;
   gap: 20px;
-  background-color: #eee;
+  background-color: rgba(5, 4, 62, 0.9);
   margin: 0 auto;
   padding: 30px 20px;
   border-radius: 10px;
@@ -251,8 +253,6 @@
       color: #959595;
     }
   }
-
-
 
   .labelInputContainer {
     display: flex;
@@ -278,33 +278,40 @@
   }
 
   .promoCodeInput {
-    padding: 10px 15px;
+    position: relative;
+    padding: 5px 40px 5px 10px;
+    height: 40px;
+    width: 100%;
     border-radius: 10px;
-    border-color: aliceblue;
+    margin-bottom: 10px;
+
+    color: white;
+
+    border-style: inset;
+    border: 2px solid green;
+    background-color: rgba(11, 8, 155, 0.3);
 
     &:focus {
-      -webkit-box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.1);
-      -moz-box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.1);
-      box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.1);
+      box-shadow: 5px 3px 3px #0dc6ec;
     }
-}
-
-.promoCodeNotice {
-  text-align: center;
-  font-size: 1.2rem;
-  line-height: 120%;
-
-  .promoCodeNoticeTitle {
-    font-weight: 600;
   }
 
-  .promoCodeNoticeCode {
-    color: #c134c6;
-    font-size: 1.3rem;
+  .promoCodeNotice {
+    text-align: center;
+    font-size: 1.2rem;
     line-height: 120%;
-    font-style: italic;
+
+    .promoCodeNoticeTitle {
+      font-weight: 600;
+    }
+
+    .promoCodeNoticeCode {
+      color: #c134c6;
+      font-size: 1.3rem;
+      line-height: 120%;
+      font-style: italic;
+    }
   }
-}
 }
 
 .basketDiscountText,
@@ -314,12 +321,12 @@
   justify-content: center;
   align-items: center;
   gap: 5px;
-  background-color: #eee;
+  background-color: rgba(5, 4, 62, 0.9);
   padding: 20px;
   border-radius: 10px;
   width: fit-content;
   font-size: 1.3rem;
-  color: #5c0b0b82;
+  color: #ff3a3ac3;
   margin: 0 auto;
   margin-bottom: 20px;
   font-style: italic;
@@ -347,7 +354,7 @@
 }
 
 .basketTotalDiscount {
-  color: green;
+  color: rgb(0, 212, 0);
 }
 
 .basketTotalNoDiscount {
