--- a/src/pages/main/categorylist/products/card/card.module.scss
+++ b/src/pages/main/categorylist/products/card/card.module.scss
@@ -6,7 +6,7 @@
   width: 48%;
   min-width: 250px;
   justify-content: start;
-  border: 1px solid rgb(3, 3, 44);
+  border: 1px solid rgb(0, 255, 68);
   border-radius: 10px;
   overflow: hidden;
 }
@@ -14,11 +14,12 @@
 .cardTitle {
   text-align: center;
   line-height: 110%;
-  background: radial-gradient(brown, rgb(70, 52, 1));
+  background: rgba(66, 162, 236, 0.8);
+  border: 1px solid rgba(255, 255, 255, 0.5);
   padding: 5px;
   margin: 0;
   width: 100%;
-  color: #fff;
+  color: black;
   border-radius: 10px;
   font-size: 1.5rem;
 }
@@ -77,7 +78,8 @@
   width: 100%;
   height: 38px;
   padding: 5px;
-  background: linear-gradient(to right, #e6dedf, rgb(125, 142, 16));
+  // background: linear-gradient(to right, #e6dedf, rgb(125, 142, 16));
+  background-color: rgba(66, 162, 236, 0.8);
   color: #fff;
   font-weight: 700;
   align-items: center;
@@ -138,7 +140,10 @@
   }
 
   .priceInfo:hover {
-    background: rgb(216, 190, 39);
+    background-color: rgba(11, 78, 130, 0.9);
+  }
+  .priceInfo.active:hover {
+    background-color: rgb(103, 177, 103);
   }
 }
 
