--- a/src/components/checkbox/checkboxComponent.module.scss
+++ b/src/components/checkbox/checkboxComponent.module.scss
@@ -1,45 +1,55 @@
 .boxContainer {
-    display: block;
-    position: relative;
-    margin: 8px 0;
-    width: 100%;
-    padding-left: 26px;
-    cursor: pointer;
+  display: flex;
+  align-items: center;
+  position: relative;
+  margin: 8px 0;
+  width: 100%;
+  padding-left: 26px;
+  cursor: pointer;
+
+  transition: all 0.3s ease;
+}
+.boxContainer p {
+  margin: 0;
+}
+.boxContainer:hover {
+  background-color: rgba(66, 162, 236, 0.2);
+  border-radius: 5px;
 }
 
 .checkboxInput {
-    appearance: none;
-    position: absolute;
-    top: 2px;
-    left: 0;
-    margin: 0;
-    width: 18px;
-    height: 18px;
-    border: 1px solid #fff;
-    border-radius: 3px;
+  appearance: none;
+  position: absolute;
+  top: 2px;
+  left: 0;
+  margin: 0;
+  width: 18px;
+  height: 18px;
+  border: 1px solid #fff;
+  border-radius: 3px;
 }
 
 .checkboxInput:checked {
-    background-color: #2b60d2;
+  background-color: #2b60d2;
 }
 
 .checkboxInput:checked::before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 2px;
-    left: 6px;
-    width: 5px;
-    height: 8px;
-    border: 2px solid transparent;
-    border-bottom-color: #fff;
-    border-right-color: #fff;
-    transform-origin: 50% 50%;
-    transform: rotate(35deg);
+  content: '';
+  display: block;
+  position: absolute;
+  top: 2px;
+  left: 6px;
+  width: 5px;
+  height: 8px;
+  border: 2px solid transparent;
+  border-bottom-color: #fff;
+  border-right-color: #fff;
+  transform-origin: 50% 50%;
+  transform: rotate(35deg);
 }
 
 .boxContainer p {
-    font-size: 16px;
-    line-height: 1.2;
-    color: #fff;
+  font-size: 16px;
+  line-height: 1.2;
+  color: #fff;
 }
