--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -1,6 +1,4 @@
 .footer {
-  display: flex;
-  justify-content: space-between;
   background-color: rgba(5, 4, 62, 0.6);
 
   border: 1px solid black;
@@ -8,4 +6,29 @@
   padding: 5px 10px;
   margin-bottom: 10px;
   border-radius: 5px;
+
+  .footerContentWrapper {
+    display: flex;
+    align-items: center;
+
+    justify-content: space-between;
+  }
+
+  .githubLinkWrapper {
+    display: flex;
+    gap: 5vw;
+  }
+
+  p {
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .footer {
+    .githubLinkWrapper {
+      flex-direction: column;
+      gap: 10px;
+    }
+  }
 }
