--- a/src/components/modal/modalWindow.module.scss
+++ b/src/components/modal/modalWindow.module.scss
@@ -6,6 +6,8 @@
   background-color: rgba(5, 4, 62, 0.9);
   border: 2px solid rgb(0, 255, 68);
 
+  color: #fff;
+
   .p {
     font-size: 1.2rem;
     margin-bottom: 1.5vw;
