--- a/src/components/user-basic-info/userbasicinfo.module.scss
+++ b/src/components/user-basic-info/userbasicinfo.module.scss
@@ -95,7 +95,7 @@
 
   h4 {
     margin: 0;
-    min-width: 150px;
+    min-width: 170px;
     text-align: center;
   }
 
@@ -147,6 +147,7 @@
 .basicInfoContainerWithoutMargin {
   margin-bottom: 0;
   background-color: inherit;
+  color: rgb(250, 235, 215);
 
   h3 {
     margin: 0;
