feat: input fix

--- a/src/pages/basket/basket.module.scss
+++ b/src/pages/basket/basket.module.scss
@@ -61,7 +61,7 @@
     padding: 0;
 
     svg {
-      fill: #1d4ae9;
+      fill: rgb(0, 255, 68);
       width: 20px;
       height: 20px;
       cursor: pointer;
