--- a/src/components/user-password/userPasswordForm.module.scss
+++ b/src/components/user-password/userPasswordForm.module.scss
@@ -22,9 +22,16 @@
   }
 
   .profileFormInput {
-    padding: 5px 10px;
+    position: relative;
+    padding: 5px 40px 5px 10px;
+    height: 40px;
+    width: 100%;
     border-radius: 10px;
-    border-color: aliceblue;
+    margin-bottom: 10px;
+    color: white;
+    border-style: inset;
+    border: 2px solid green;
+    background-color: rgba(11, 8, 155, 0.3);
 
     &:focus {
       -webkit-box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.1);
