feat: fixed image path

--- a/src/components/promo/promoCode.module.scss
+++ b/src/components/promo/promoCode.module.scss
@@ -28,9 +28,9 @@
 }
 
 .rsteamDiscount {
-  background-image: url(./coupon50.svg);
+  background-image: url(/coupon50.svg);
 }
 
 .raceDiscount {
-  background-image: url(./coupon10.svg);
+  background-image: url(/coupon10.svg);
 }
