--- a/src/pages/main/categorylist/products/card/card.module.scss
+++ b/src/pages/main/categorylist/products/card/card.module.scss
@@ -131,6 +131,13 @@
     transform: scale(1.1);
   }
 
+  .card:hover {
+    box-shadow:
+      0 0 2px rgba(0, 183, 255, 0.7),
+      0 0 5px rgba(0, 183, 255, 0.6),
+      0 0 15px rgba(0, 183, 255, 0.5);
+  }
+
   .cardContainer:hover .cardDescription {
     transform: scale(0.9);
   }
